[package]
name = "mls"
version = "0.0.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
description = "MLS implementation in Rust"
license = "MPL-2.0"
repository = "https://github.com/franziskuskiefer/mls-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
